# stella

./: .env.local  .gitignore  AGENTS.md  COMMAND_DECK_DESIGN.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task-5-report.md  task-6-report.md
.github/: CODEOWNERS
.github/homebrew/: stella.rb.tmpl
.github/workflows/: agent-regression-gate.yml  auto-tag.yml  ci.yml  docs.yml  live-smoke.yml  release.yml
.oxagen/memories/: _index.md  model-call-usage-completeness-must-fail-closed.md
arena/: README.md  package.json
arena/src/: agents.mjs  cli.mjs  mock-solver.mjs  results.mjs  runner.mjs  server.mjs
arena/web/: index.html
bench/: README.md  leaderboard.json  run_swebench.py
bench/harbor_adapter/: run.sh
bench/loop-bench/: Cargo.toml
bench/loop-bench/src/: main.rs
bench/terminal_bench_analysis/: tb21_evidence_contract.py
content/docs/: agent-engine.mdx  agent-fleets.mdx  context-engine.mdx  donate.mdx  extensions.mdx  goal-mode.mdx  index.mdx  inference-pipeline.mdx  installation.mdx  memory.mdx  meta.json  providers.mdx  quickstart.mdx  scripting.mdx  telemetry.mdx
docs/: cli-reference.md  self-improvement-ideas.md
docs/adaptive-context/: phase-0-baseline.md
docs/adr/: 0001-semantic-taxonomy.md  0002-scope-vs-sharing.md  0003-bitemporal-semantics.md  0004-record-revision-identity.md  0005-storage-authority.md  0006-contextframe-vs-compiledcontextframe.md  0007-immutable-promotion-history.md  0008-markdown-canonical-rules.md  README.md
docs/design/: adaptive-context.plan.toml  enterprise-authority-telemetry.md  scripts-index.md  session-telemetry-receipts-spec.md
docs/ocp/: README.md  implementing-a-provider.md  protocol-advantages.md  protocol-surface.md  running-conformance.md  stability.md
docs/papers/: README.md  deterministic-engine.md  stella-defensible-position.md
ocp-conformance/: Cargo.toml  README.md
ocp-conformance/src/: lib.rs  report.rs
ocp-conformance/tests/: conformance_suite.rs  stdio_roundtrip.rs
ocp-host/: Cargo.toml  README.md
ocp-host/src/: consent.rs  error.rs  host.rs  http.rs  lib.rs  provider.rs  stdio.rs  wire.rs
ocp-types/: Cargo.toml  README.md
ocp-types/src/: capability.rs  frame.rs  lib.rs  query.rs
packaging/homebrew/: stella.rb
sandbox/provider-host-mismatch/: README.md  mock_provider.py  run.sh  scenarios.tsv
scripts/: file-size-ratchet.txt
src/: mdx-components.tsx
src/app/: global.css  layout.tsx  sitemap.ts
src/lib/: layout.shared.tsx
stella-cli/: Cargo.toml
stella-cli/src/: agent.rs  agent_tests.rs  arena.rs  cache_insight.rs  candidate_ws.rs  claims.rs  command_deck.rs  config.rs  config_tests.rs  connect_cmd.rs  contextgraph.rs  domains.rs  engine_config.rs  extensions.rs  fleet_cmd.rs  interactive.rs  main.rs  main_tests.rs  mcp_cmd.rs  memory.rs  memory_cmd.rs  model_catalog.rs  ocp.rs  rules.rs  settings.rs  settings_check.rs  stats.rs  subsession.rs  tui.rs
stella-cli/src/agent/: engine.rs  goal.rs  tools.rs
stella-cli/src/command_deck/: forwarder.rs  tests.rs
stella-cli/src/config/: tests.rs
stella-cli/src/memory/: projection.rs
stella-cli/src/settings/: context.rs  merge.rs
stella-cli/tests/fixtures/: context_settings.json
stella-cli/tests/fixtures/rules/: api-integration-coverage.md  no-hand-edited-migrations.md
stella-context/: Cargo.toml
stella-context/src/: provider.rs  retrieval.rs  store.rs
stella-core/src/: accounted_call.rs  bus.rs  compaction.rs  driver.rs  extensions.rs  goal.rs  hooks.rs  lib.rs  loop_detect.rs  ports.rs  router.rs  rules.rs  skills.rs  speculation.rs  summarize.rs
stella-docs/: .gitignore  README.md  next.config.mjs  package.json  tsconfig.json
stella-docs/src/: mdx-components.tsx
stella-fleet/src/: cache_schedule.rs  fleet.rs  git.rs  lib.rs  monitor.rs  plan.rs
stella-graph/: Cargo.toml
stella-graph/src/: frames.rs  graph.rs  import.rs  lib.rs  parse.rs  queries.rs  store.rs
stella-graph/tests/: frames.rs  generated_exclusion.rs  languages.rs
stella-mcp/: Cargo.toml
stella-mcp/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  oauth.rs  protocol.rs  stdio.rs  toolset.rs
stella-mcp/tests/: oauth_integration.rs
stella-media/src/: cost_gate.rs  credential.rs  emit.rs  error.rs  lib.rs  provider.rs  svg.rs
stella-model/: Cargo.toml
stella-model/src/: anthropic.rs  bedrock.rs  cache_economics.rs  catalog.rs  credential.rs  gemini.rs  http.rs  lib.rs  modelsdev.rs  openai.rs  provider.rs  provider_listing.rs  sse.rs  vertex.rs  (+1 more)
stella-observatory/: Cargo.toml
stella-serve/: Cargo.toml
stella-store/: Cargo.toml
stella-tools/: Cargo.toml
(+230 files in other folders)
