[package]
name = "ocp-host"
description = "Open Context Protocol host runtime: provider discovery, stdio/http transports, capability negotiation, routing, consent gating. Usable by any Rust agent that wants OCP support."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ocp-types = { path = "../ocp-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
# Unix process-group creation (setsid) + kill(-pgid): a stdio provider's
# whole child tree dies on drop/shutdown, never outliving the host
# (06-context-protocol.md §3.5; 02-architecture.md §8). Same narrow
# OS-boundary use stella-tools' bash tool makes.
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6"
