[package]
name = "stella-cli"
description = "The stella CLI — a fast, BYOK, model-agnostic terminal coding agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "stella"
path = "src/main.rs"

[dependencies]
stella-protocol = { path = "../stella-protocol" }
stella-core = { path = "../stella-core" }
stella-model = { path = "../stella-model" }
stella-tools = { path = "../stella-tools" }
stella-store = { path = "../stella-store" }
stella-mcp = { path = "../stella-mcp" }
stella-context = { path = "../stella-context" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
